storage/beb4d37b-25a4-4fd8-aa41-763da3b5070b/results/step_006_1760631169.txt
=== STDOUT ===


=== STDERR ===
  File "C:\Users\rehaa\AppData\Local\Temp\tmpqaufxzvb.py", line 1
    pip install matplotlib
        ^^^^^^^
SyntaxError: invalid syntax
